# bmd

./: .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  MANUAL.md  PLUGINS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
core/: clipboard.ts  commands.ts  config.ts  highlight.ts  index.ts  outline.ts  theme.ts
core/input/: selectionToolbar.ts  slash.ts
core/parser/: math.ts
core/preview/: blockField.ts  headingField.ts  livePreview.ts  widgets.ts
core/render/: lazy.ts
examples/plugins/hello-world/: main.js  manifest.json
scripts/: check-version.mjs
shared/: file-types.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  commands.rs  main.rs  pdf.rs  preview.rs  rag.rs  watcher.rs
src/components/: ActivityBar.vue  AiDiffModal.vue  AiMessage.vue  AiPanel.vue  AiProviderModal.vue  ContextMenu.vue  EditorHost.vue  FileNode.vue  Outline.vue  QuickOpen.vue  SettingsPanel.vue  Sidebar.vue  SkillModal.vue  SplashScreen.vue  StatusBar.vue  TitleBar.vue
src/export/: html.ts  index.ts
src/lib/: editorRegistry.ts  fileTypes.ts  ipc.ts  mdlite.ts  menuBus.ts  platform.ts  pluginApi.ts  sessionPersistence.ts  shortcuts.ts
src/stores/: ai.ts  files.ts  plugins.ts  tabs.ts  ui.ts  workspace.ts
src/styles/: tokens.css
tests/: ai.test.ts  editorHost.test.ts  features.test.ts  fileNode.test.ts  kernelElements.test.ts  livePreview.test.ts  m3.test.ts  m4.test.ts  plugins.test.ts  rag.test.ts  settingsPanel.test.ts  stores.test.ts
