[package]
name = "bmd"
version = "0.1.0"
description = "bmd (Bao Markdown) — Typora-style markdown editor"
authors = ["aixlb"]
edition = "2021"
license = "MIT"
repository = "https://github.com/aixlb/bmd"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.7"
trash = "5"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
