[package]
name = "bmd"
version = "0.1.0"
description = "bmd (Bao Markdown) — Typora-style markdown editor"
authors = ["aixlb"]
edition = "2021"
license = "MIT"
repository = "https://github.com/aixlb/bmd"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.7"
trash = "5"
base64 = "0.22"
notify = "8"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
# fat LTO 与 window-vibrancy 的 objc 类符号冲突（重复定义），用 thin
lto = "thin"
strip = true
panic = "abort"
